--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
     "@langchain/core": "^0.3.61",
     "@langchain/google-genai": "^0.2.13",
     "@langchain/openai": "^0.5.15",
+    "@langchain/pinecone": "^0.2.0",
     "@langchain/qdrant": "^0.1.2",
     "@langchain/textsplitters": "^0.1.0",
+    "@pinecone-database/pinecone": "^5.0.2",
     "@qdrant/js-client-rest": "^1.14.1",
     "bullmq": "^5.55.0",
     "cors": "^2.8.5",
