--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-dropzone": "^14.3.8",
     "react-element-to-jsx-string": "^17.0.1",
     "react-icons": "^5.5.0",
+    "simple-icons": "^15.4.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1"
   },
