--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@bull-board/express": "^6.10.1",
     "@clerk/express": "^1.7.2",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.61",
@@ -23,6 +24,7 @@
     "@langchain/textsplitters": "^0.1.0",
     "@pinecone-database/pinecone": "^5.0.2",
     "@qdrant/js-client-rest": "^1.14.1",
+    "@uploadthing/react": "^7.3.2",
     "bullmq": "^5.55.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -30,7 +32,8 @@
     "ioredis": "^5.6.1",
     "multer": "^2.0.1",
     "pdf-parse": "^1.1.1",
-    "redis": "^5.5.6"
+    "redis": "^5.5.6",
+    "uploadthing": "^7.7.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
